Improve semantic of Index HTML

--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -53,45 +53,45 @@
             <h2>Обучения</h2>
             <p>Качествени курсове за подготовка на кандидат-студенти, матури, изпити след 7 клас и чуждоезиково обучение.</p>
         </div>
-        <div class="wrapper">
+        <ul class="wrapper">
 
-            <div class="box">
+            <li class="box">
                 <div class="icon"><i class="fa fa-book"></i></div>
                 <h4 class="title"><a asp-controller="Home" asp-action="BgLangAndLitr">Матура по български език и литература</a></h4>
                 <p class="description">
                     Матурата по български език е оценка на първата ключова компетентност за
                     всеки български (европейски) гражданин.
                 </p>
-            </div>
+            </li>
 
-            <div class="box">
+            <li class="box">
                 <div class="icon"><i class="fa fa-calculator"></i></div>
                 <h4 class="title"><a asp-controller="Home" asp-action="Math">Кандидатстване с математика</a></h4>
                 <p class="description">
                     Учебните материали отговарят на формата на изпита –
                     писмен изпит по математика, тестови изпит или формат за матура по математика.
                 </p>
-            </div>
+            </li>
 
-            <div class="box">
+            <li class="box">
                 <div class="icon"><i class="fa fa-university"></i></div>
                 <h4 class="title"><a asp-controller="Home" asp-action="History">Кандидатстване с история</a></h4>
                 <p class="description">
                     Разработени подробни теми по история в 3 части за
                     кандидатстване в университети и полагане на държавен зрелостен изпит.
                 </p>
-            </div>
+            </li>
 
-            <div class="box">
+            <li class="box">
                 <div class="icon"><i class="fa fa-language"></i></div>
                 <h4 class="title"><a asp-controller="Home" asp-action="English">Матура по английски език</a></h4>
                 <p class="description">
                     Присъствени едногодишни и двугодишни курсове за подготовка за матура и
                     кандидатстване в университет.
                 </p>
-            </div>
+            </li>
 
-        </div>
+        </ul>
     </section><!-- #services -->
     <!--==========================
       Testimonials Section
@@ -101,9 +101,8 @@
             <h2>Препоръки</h2>
             <p>Мненията на нашите ученици и партньори.</p>
         </div>
-        <div class="wrapper">
-
-            <div class="testimonial-item">
+        <ul class="wrapper">
+            <li class="testimonial-item">
                 <p>
                     <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
                     Екип и материали създадени за Вас и вашите нужди за да ви направят по-добри от всички.
@@ -112,9 +111,9 @@
                 <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
                 <h3>Дани Минчев</h3>
                 <h4>Директор &amp; Основател</h4>
-            </div>
+            </li>
 
-            <div class="testimonial-item">
+            <li class="testimonial-item">
                 <p>
                     <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
                     Обучението е на високо ниво и всички материали съответстват на актуалните учебни програми.
@@ -123,9 +122,9 @@
                 <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
                 <h3>Сара Каплан</h3>
                 <h4>Родител</h4>
-            </div>
+            </li>
 
-            <div class="testimonial-item">
+            <li class="testimonial-item">
                 <p>
                     <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
                     Постигнах невероятни резултати благодарение на преподавателите и материалите в учебния център.
@@ -134,9 +133,9 @@
                 <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
                 <h3>Жени Кирова</h3>
                 <h4>Ученик</h4>
-            </div>
+            </li>
 
-            <div class="testimonial-item">
+            <li class="testimonial-item">
                 <p>
                     <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
                     Страхотен екип с когото се работи лесно и и пред които успехът тепърва предстои.
@@ -145,9 +144,9 @@
                 <img src="img/testimonial-5.jpg" class="testimonial-img" alt="">
                 <h3>Иван Лефтеров</h3>
                 <h4>Предприемач</h4>
-            </div>
+            </li>
 
-        </div>
+        </ul>
     </section><!-- #testimonials -->
     <!--==========================
       Our Team Section
@@ -156,8 +155,8 @@
         <div class="section-header">
             <h2>Нашите преподаватели</h2>
         </div>
-        <div class="wrapper">
-            <div class="member">
+        <ul class="wrapper">
+            <li class="member">
                 <div class="pic"><img src="img/team-1.jpg" alt=""></div>
                 <div class="details">
                     <h4>Иван Иванов</h4>
@@ -169,9 +168,9 @@
                         <a href=""><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
-            </div>
+            </li>
 
-            <div class="member">
+            <li class="member">
                 <div class="pic"><img src="img/team-2.jpg" alt=""></div>
                 <div class="details">
                     <h4>Нина Николова</h4>
@@ -183,9 +182,9 @@
                         <a href=""><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
-            </div>
+            </li>
 
-            <div class="member">
+            <li class="member">
                 <div class="pic"><img src="img/team-3.jpg" alt=""></div>
                 <div class="details">
                     <h4>Велислав Донков</h4>
@@ -197,9 +196,9 @@
                         <a href=""><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
-            </div>
+            </li>
 
-            <div class="member">
+            <li class="member">
                 <div class="pic"><img src="img/team-4.jpg" alt=""></div>
                 <div class="details">
                     <h4>Дани Монева</h4>
@@ -211,9 +210,9 @@
                         <a href=""><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
-            </div>
+            </li>
 
-        </div>
+        </ul>
     </section><!-- #team -->
     <!--==========================
       Contact Section
@@ -229,27 +228,26 @@
         </div>
 
         <div class="wrapper">
-            <div class="contact-info">
-
-                <div class="contact-address">
+            <ul class="contact-info">
+                <li class="contact-address">
                     <i class="ion-ios-location-outline"></i>
                     <h3>Адрес</h3>
                     <address><a href="#">ж.к. Хладилника, ул. Банат 16А, София, България</a></address>
-                </div>
+                </li>
 
-                <div class="contact-phone">
+                <li class="contact-phone">
                     <i class="ion-ios-telephone-outline"></i>
                     <h3>Телефонен номер</h3>
                     <p><a href="tel:+359883483509">0883 48-35-09</a></p>
-                </div>
+                </li>
 
-                <div class="contact-email">
+                <li class="contact-email">
                     <i class="ion-ios-email-outline"></i>
                     <h3>Имейл</h3>
                     <p><a href="mailto:svetleto_gb@abv.bg">svetleto_gb@abv.bg</a></p>
-                </div>
+                </li>
 
-            </div>
+            </ul>
         </div>
 
         <div class="google-map">
