Start styles CSS transformation

--- a/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
@@ -61,10 +61,7 @@
     <footer class="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>replicated with learning purpose</strong>. All Rights Reserved
-            </div>
-            <div class="credits">
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                &copy; Copyright <strong>with learning purpose</strong>. All Rights Reserved
             </div>
         </div>
     </footer><!-- #footer -->
