--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -128,13 +128,10 @@ body {
 a {
   color: #50d8af;
   transition: 0.5s; }
-
-a:hover,
-a:active,
-a:focus {
-  color: #51d8af;
-  outline: none;
-  text-decoration: none; }
+  a:hover, a:active, a:focus {
+    color: #51d8af;
+    outline: none;
+    text-decoration: none; }
 
 p {
   padding: 0;
@@ -154,7 +151,7 @@ h6 {
 /* Back to top button */
 .back-to-top {
   position: fixed;
-  display: none;
+  display: block;
   background: #50d8af;
   color: #fff;
   padding: 6px 12px 9px 12px;
@@ -163,15 +160,13 @@ h6 {
   right: 15px;
   bottom: 15px;
   transition: background 0.5s; }
-
-.back-to-top:focus {
-  background: #50d8af;
-  color: #fff;
-  outline: none; }
-
-.back-to-top:hover {
-  background: #0c2e8a;
-  color: #fff; }
+  .back-to-top:focus {
+    background: #50d8af;
+    color: #fff;
+    outline: none; }
+  .back-to-top:hover {
+    background: #0c2e8a;
+    color: #fff; }
 
 /*--------------------------------------------------------------
 # Top Bar
@@ -181,39 +176,31 @@ h6 {
   padding: 10px 0;
   border-bottom: 1px solid #eee;
   font-size: 14px; }
-
-.topbar .wrapper {
-  display: flex;
-  justify-content: space-between; }
-
-.topbar .contact-info a {
-  line-height: 1;
-  color: #555; }
-
-.topbar .contact-info a:hover {
-  color: #50d8af; }
-
-.topbar .contact-info i {
-  color: #50d8af;
-  padding: 4px; }
-
-.topbar .contact-info .fa-phone {
-  padding-left: 20px;
-  margin-left: 20px;
-  border-left: 1px solid #e9e9e9; }
-
-.topbar .social-links a {
-  color: #555;
-  padding: 4px 12px;
-  display: inline-block;
-  line-height: 1px;
-  border-left: 1px solid #e9e9e9; }
-
-.topbar .social-links a:hover {
-  color: #50d8af; }
-
-.topbar .social-links a:first-child {
-  border-left: 0; }
+  .topbar .wrapper {
+    display: flex;
+    justify-content: space-between; }
+  .topbar .contact-info a {
+    line-height: 1;
+    color: #555; }
+    .topbar .contact-info a:hover {
+      color: #50d8af; }
+  .topbar .contact-info i {
+    color: #50d8af;
+    padding: 4px; }
+  .topbar .contact-info .fa-phone {
+    padding-left: 20px;
+    margin-left: 20px;
+    border-left: 1px solid #e9e9e9; }
+  .topbar .social-links a {
+    color: #555;
+    padding: 4px 12px;
+    display: inline-block;
+    line-height: 1px;
+    border-left: 1px solid #e9e9e9; }
+    .topbar .social-links a:hover {
+      color: #50d8af; }
+    .topbar .social-links a:first-child {
+      border-left: 0; }
 
 /*--------------------------------------------------------------
 # Header
@@ -224,26 +211,22 @@ header {
   transition: all 0.5s;
   z-index: 997;
   background: #fff; }
-
-header .wrapper {
-  display: flex;
-  justify-content: space-between; }
-
-header .logo h1 {
-  font-size: 4em;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700; }
-
-header .logo h1 a {
-  color: #0c2e8a;
-  line-height: 1;
-  display: inline-block; }
-
-header .logo h1 a span {
-  color: #50d8af; }
+  header .wrapper {
+    display: flex;
+    justify-content: space-between; }
+  header .logo h1 {
+    font-size: 4em;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700; }
+    header .logo h1 a {
+      color: #0c2e8a;
+      line-height: 1;
+      display: inline-block; }
+      header .logo h1 a span {
+        color: #50d8af; }
 
 /*--------------------------------------------------------------
 # Intro Section
@@ -623,7 +606,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   min-height: 350px;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
   flex: 0 0 20%;
-  display: block; }
+  display: block;
+  transition: 0.3s ease-in-out;
+  cursor: pointer; }
+
+.testimonials .testimonial-item:hover {
+  transform: scale(1.1); }
 
 .testimonials .testimonial-item .testimonial-img {
   width: 90px;
@@ -683,13 +671,20 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .team .wrapper {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin-top: 1em; }
 
 .team .member {
   text-align: center;
   margin-bottom: 1.5em;
   flex: 0 0 20%;
-  display: block; }
+  display: block;
+  cursor: pointer;
+  transition: 0.3s ease-in-out; }
+
+.team .member:hover {
+  outline: solid 0.2em var(--color-theme, #50d8af);
+  transform: translateY(-1em); }
 
 .team .member .pic {
   overflow: hidden;
