Improve media queries

--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
 
         <div class="text-container">
             <h2>Образователни услуги</h2>
-            <h3>Запознаите се с нашите образователни услуги!</h3>
+            <h5>Запознаите се с нашите образователни услуги!</h5>
 
             <ul>
                 <li><i class="ion-android-checkmark-circle"></i> Избор на професия.</li>
@@ -51,7 +51,7 @@
     <section id="services" class="services">
         <div class="section-header">
             <h2>Обучения</h2>
-            <p>Качествени курсове за подготовка на кандидат-студенти, матури, изпити след 7 клас и чуждоезиково обучение.</p>
+            <p class="subtitle">Качествени курсове за подготовка на кандидат-студенти, матури, изпити след 7 клас и чуждоезиково обучение.</p>
         </div>
         <ul class="wrapper">
 
