--- a/src/Web/LearningPlusWebApp/wwwroot/scss/_variables.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/_variables.scss
@@ -1,5 +1,8 @@
 :root {
     --color-theme: #50d8af;
+    --color-theme-focus: #51d8af;
+    --color-theme-bold: #0c2e8a;
+
     /*--font-size-body: 14px; 
     --font-size-body-larger: 16px;
     --font-size-body-big: 18px;
