--- a/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
     <footer class="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>with learning purpose</strong>. All Rights Reserved
+                &copy; Copyright <strong>for learning purpose</strong>. All Rights Reserved
             </div>
         </div>
     </footer><!-- #footer -->
