--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -1,6 +1,8 @@
 ﻿@import url("https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,700,700i|Merriweather:400,400i,700,700i&display=swap");
 :root {
   --color-theme: #50d8af;
+  --color-theme-focus: #51d8af;
+  --color-theme-bold: #0c2e8a;
   /*--font-size-body: 14px; 
     --font-size-body-larger: 16px;
     --font-size-body-big: 18px;
@@ -121,21 +123,21 @@ blockquote .author:before {
 body {
   background: #fff;
   color: #444;
-  width: 1300px;
-  margin: 0 auto;
-  /*font-family: "Open Sans", sans-serif;*/ }
+  max-width: 1300px;
+  width: 100vw;
+  margin: 0 auto; }
 
 a {
-  color: #50d8af;
+  color: var(--color-theme, var(--color-theme, #50d8af));
   transition: 0.5s; }
   a:hover, a:active, a:focus {
-    color: #51d8af;
+    color: var(--color-theme-focus, #51d8af);
     outline: none;
     text-decoration: none; }
 
 p {
   padding: 0;
-  margin: 0 0 30px 0; }
+  margin: 0 0 2em 0; }
 
 h1,
 h2,
@@ -145,23 +147,23 @@ h5,
 h6 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  margin: 0 0 20px 0;
+  margin: 0 0 1.2em 0;
   padding: 0; }
 
 /* Back to top button */
 .back-to-top {
   position: fixed;
   display: block;
-  background: #50d8af;
+  background: var(--color-theme, var(--color-theme, #50d8af));
   color: #fff;
-  padding: 6px 12px 9px 12px;
-  font-size: 16px;
+  padding: 0.4em 0.8em 0.5em 0.8em;
+  font-size: 1em;
   border-radius: 2px;
-  right: 15px;
-  bottom: 15px;
+  right: 1em;
+  bottom: 1em;
   transition: background 0.5s; }
   .back-to-top:focus {
-    background: #50d8af;
+    background: var(--color-theme, var(--color-theme, #50d8af));
     color: #fff;
     outline: none; }
   .back-to-top:hover {
@@ -183,9 +185,9 @@ h6 {
     line-height: 1;
     color: #555; }
     .topbar .contact-info a:hover {
-      color: #50d8af; }
+      color: var(--color-theme, var(--color-theme, #50d8af)); }
   .topbar .contact-info i {
-    color: #50d8af;
+    color: var(--color-theme, var(--color-theme, #50d8af));
     padding: 4px; }
   .topbar .contact-info .fa-phone {
     padding-left: 20px;
@@ -198,7 +200,7 @@ h6 {
     line-height: 1px;
     border-left: 1px solid #e9e9e9; }
     .topbar .social-links a:hover {
-      color: #50d8af; }
+      color: var(--color-theme, var(--color-theme, #50d8af)); }
     .topbar .social-links a:first-child {
       border-left: 0; }
 
@@ -226,7 +228,7 @@ header {
       line-height: 1;
       display: inline-block; }
       header .logo h1 a span {
-        color: #50d8af; }
+        color: var(--color-theme, var(--color-theme, #50d8af)); }
 
 /*--------------------------------------------------------------
 # Intro Section
@@ -256,7 +258,7 @@ header {
       font-size: 64px;
       font-weight: 700; }
       .intro .intro-content h2 span {
-        color: #50d8af;
+        color: var(--color-theme, #50d8af);
         text-decoration: underline; }
 
 /*--------------------------------------------------------------
@@ -296,7 +298,7 @@ header {
     outline: none; }
   .nav-menu li:hover > a,
   .nav-menu .menu-active > a {
-    color: #50d8af; }
+    color: var(--color-theme, #50d8af); }
   .nav-menu ul {
     margin: 4px 0 0 0;
     padding: 10px;
@@ -312,7 +314,7 @@ header {
         font-size: 13px;
         text-transform: none; }
   .nav-menu ul li:hover > a {
-    color: #50d8af; }
+    color: var(--color-theme, #50d8af); }
   .nav-menu ul ul {
     margin: 0; }
 
@@ -338,7 +340,7 @@ header {
     display: block;
     /*width: 4em;*/
     height: 3px;
-    background: #50d8af;
+    background: var(--color-theme, #50d8af);
     bottom: 0;
     left: 0;
     right: 0%;
@@ -349,13 +351,33 @@ header {
 .about {
   margin: 1em 0;
   display: flex;
-  justify-content: space-between; }
-  .about h2 {
-    text-align: center; }
+  justify-content: space-between;
+  padding: 0 2em 0 1em; }
+  .about h2, .about h5 {
+    text-align: center;
+    margin: 0; }
   .about ul {
-    padding: 1em; }
+    padding: 1em;
+    list-style: armenian;
+    padding: 0 5em;
+    margin-top: 1em; }
   .about > div {
-    flex: 0 0 48%; }
+    flex: 0 0 50%; }
+  .about .img-container {
+    position: relative;
+    overflow: hidden; }
+    .about .img-container img {
+      border-radius: 0.5rem;
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: auto;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+  .about .text-container {
+    background-color: azure;
+    text-align: center; }
 
 /* Services Section
 --------------------------------*/
@@ -365,7 +387,8 @@ header {
     margin-top: 1em;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around; }
+    justify-content: space-around;
+    padding: 0 2em 0 1em; }
   .services .box {
     padding: 40px;
     margin-bottom: 40px;
@@ -387,7 +410,7 @@ header {
       margin-top: 34px; }
       .services .box .icon i:before {
         background: #0c2e8a;
-        background: linear-gradient(45deg, #50d8af 0%, #a3ebd5 100%);
+        background: linear-gradient(45deg, var(--color-theme, #50d8af) 0%, #a3ebd5 100%);
         background-clip: border-box; }
     .services .box h4 {
       margin-left: 100px;
@@ -408,7 +431,8 @@ header {
   padding: 2em 0; }
   .testimonials .wrapper {
     display: flex;
-    justify-content: space-between; }
+    justify-content: space-between;
+    padding: 0 2em 0 1em; }
   .testimonials .testimonial-item {
     box-sizing: content-box;
     /*padding: 2em 2em 0 2em;*/
@@ -459,7 +483,8 @@ header {
   .team .wrapper {
     display: flex;
     justify-content: space-between;
-    margin-top: 1em; }
+    margin-top: 1em;
+    padding: 0 2em 0 1em; }
   .team .member {
     text-align: center;
     margin-bottom: 1.5em;
@@ -468,7 +493,7 @@ header {
     cursor: pointer;
     transition: 0.3s ease-in-out; }
     .team .member:hover {
-      outline: solid 0.2em var(--color-theme, #50d8af);
+      outline: solid 0.2em var(--color-theme, var(--color-theme, #50d8af));
       transform: translateY(-1em); }
     .team .member .pic {
       overflow: hidden;
@@ -476,7 +501,7 @@ header {
       .team .member .pic img {
         max-width: 100%; }
     .team .member .details {
-      background: #50d8af;
+      background: var(--color-theme, #50d8af);
       color: #fff;
       padding: 15px;
       border-radius: 0 0 3px 3px; }
@@ -500,16 +525,19 @@ header {
 --------------------------------*/
 .contact {
   padding: 30px 0; }
+  .contact .section-header p {
+    padding-right: 0.5em; }
   .contact .contact-info {
     display: flex;
     margin-bottom: 1.2em;
     text-align: center;
-    justify-content: space-between; }
+    justify-content: space-between;
+    padding: 0 2em 0 1em; }
     .contact .contact-info i {
       font-size: 48px;
       display: inline-block;
       margin-bottom: 10px;
-      color: #50d8af; }
+      color: var(--color-theme, #50d8af); }
     .contact .contact-info address,
     .contact .contact-info p {
       margin-bottom: 0;
@@ -524,7 +552,7 @@ header {
     .contact .contact-info a {
       color: #000; }
     .contact .contact-info a:hover {
-      color: #50d8af; }
+      color: var(--color-theme, #50d8af); }
   .contact .contact-address,
   .contact .contact-phone,
   .contact .contact-email {
@@ -537,7 +565,8 @@ header {
   .contact form {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; }
+    justify-content: space-between;
+    padding: 0 2em 0 1em; }
     .contact form .name,
     .contact form .email {
       flex: 0 0 49.5%; }
@@ -550,26 +579,6 @@ header {
     .contact form input {
       width: 100%;
       margin: 0.2em 0; }
-    .contact form #sendmessage {
-      color: #50d8af;
-      border: 1px solid #50d8af;
-      display: none;
-      text-align: center;
-      padding: 15px;
-      font-weight: 600;
-      margin-bottom: 15px; }
-    .contact form #errormessage {
-      color: red;
-      display: none;
-      border: 1px solid red;
-      text-align: center;
-      padding: 15px;
-      font-weight: 600;
-      margin-bottom: 15px; }
-    .contact form #sendmessage.show,
-    .contact form #errormessage.show,
-    .contact form .show {
-      display: block; }
     .contact form .validation {
       color: red;
       display: none;
@@ -584,7 +593,7 @@ header {
       font-size: 15px;
       resize: none; }
     .contact form button[type="submit"] {
-      background: #50d8af;
+      background: var(--color-theme, #50d8af);
       border: 0;
       border-radius: 3px;
       padding: 10px 30px;
@@ -593,6 +602,29 @@ header {
       cursor: pointer; }
     .contact form button[type="submit"]:hover {
       background: #2dc899; }
+
+#sendmessage {
+  color: var(--color-theme, #50d8af);
+  border: 1px solid var(--color-theme, #50d8af);
+  display: none;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+  margin-bottom: 15px; }
+
+#errormessage {
+  color: red;
+  display: none;
+  border: 1px solid red;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+  margin-bottom: 15px; }
+
+#sendmessage.show,
+#errormessage.show,
+.show {
+  display: block; }
 
 /*--------------------------------------------------------------
 # Footer
@@ -614,7 +646,7 @@ header {
 /*--------------------------------------------------------------
 # Media queries
 --------------------------------------------------------------*/
-@media (min-width: 768px) {
+@media (min-width: 767px) {
   .contact .contact-address,
   .contact .contact-phone,
   .contact .contact-email {
@@ -640,11 +672,20 @@ header {
     margin-left: 0;
     padding-bottom: 30px; } }
 
-@media (max-width: 767px) {
+@media (max-width: 1000px) {
   .intro .intro-content h2 {
     font-size: 34px; }
-  .services .box .box {
-    margin-bottom: 20px; }
+  .services {
+    text-align: center; }
+  .services .wrapper {
+    width: 80vw;
+    margin: 1em auto; }
+  .services .subtitle {
+    width: 60vw;
+    margin: auto; }
+  .services .box {
+    margin-bottom: 20px;
+    flex: 0 0 100%; }
   .services .box .icon {
     float: none;
     text-align: center;
@@ -653,12 +694,64 @@ header {
   .services .box p {
     margin-left: 0;
     text-align: center; }
+  .testimonials {
+    width: 100vw;
+    margin: 0 auto; }
+  .testimonials .wrapper {
+    flex-wrap: wrap;
+    padding: 0 2em 0 1em; }
+  .testimonials .section-header {
+    text-align: center; }
   .testimonials .testimonial-item {
-    margin: 30px 10px; } }
+    flex: 0 0 45%;
+    margin: 30px 10px; }
+  .team .wrapper {
+    width: 50vw;
+    flex-wrap: wrap;
+    margin: 0 auto; }
+    .team .wrapper .member {
+      flex: 0 0 100%; }
+  .team .section-header {
+    text-align: center; }
+  .contact .section-header {
+    text-align: center; }
+    .contact .section-header p {
+      width: 90vw;
+      margin: 0 auto; } }
+
+@media (max-width: 1100px) {
+  .about {
+    display: block;
+    position: relative;
+    color: var(--color-theme-bold, #0c2e8a); }
+    .about .img-container {
+      margin: 0 auto;
+      width: 80vw;
+      height: auto; }
+      .about .img-container img {
+        position: relative;
+        top: 0;
+        left: 0;
+        transform: translate(0, 0);
+        opacity: 0.7; }
+    .about .text-container {
+      background-color: transparent;
+      margin: 0 auto;
+      width: 80vw;
+      height: auto;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0; } }
 
 @media (max-width: 576px) {
   .contact .google-map {
-    margin-top: 20px; } }
+    margin-top: 20px; }
+  .about .img-container {
+    display: none; }
+  .about .text-container {
+    position: relative; } }
 
 /*--------------------------------------------------------------
 # Custom
@@ -743,39 +836,19 @@ header {
   color: #fff;
   background-color: #3b5998;
   border-color: rgba(0, 0, 0, 0.2); }
+  .btn-facebook:focus, .btn-facebook:focus {
+    color: #fff;
+    background-color: #2d4373;
+    border-color: rgba(0, 0, 0, 0.2); }
+  .btn-facebook:hover {
+    color: #fff;
+    background-color: #2d4373;
+    border-color: rgba(0, 0, 0, 0.2); }
+  .btn-facebook:active, .btn-facebook.active {
+    color: #fff;
+    background-color: #2d4373;
+    border-color: rgba(0, 0, 0, 0.2); }
 
-.btn-facebook:focus, .btn-facebook.focus {
-  color: #fff;
-  background-color: #2d4373;
-  border-color: rgba(0, 0, 0, 0.2); }
-
-.btn-facebook:hover {
-  color: #fff;
-  background-color: #2d4373;
-  border-color: rgba(0, 0, 0, 0.2); }
-
-.btn-facebook:active, .btn-facebook.active, .open > .dropdown-toggle.btn-facebook {
-  color: #fff;
-  background-color: #2d4373;
-  border-color: rgba(0, 0, 0, 0.2); }
-
-.btn-facebook:active:hover, .btn-facebook.active:hover, .open > .dropdown-toggle.btn-facebook:hover, .btn-facebook:active:focus, .btn-facebook.active:focus, .open > .dropdown-toggle.btn-facebook:focus, .btn-facebook:active.focus, .btn-facebook.active.focus, .open > .dropdown-toggle.btn-facebook.focus {
-  color: #fff;
-  background-color: #23345a;
-  border-color: rgba(0, 0, 0, 0.2); }
-
-.btn-facebook:active, .btn-facebook.active, .open > .dropdown-toggle.btn-facebook {
-  background-image: none; }
-
-.btn-facebook.disabled:hover, .btn-facebook[disabled]:hover, fieldset[disabled] .btn-facebook:hover, .btn-facebook.disabled:focus, .btn-facebook[disabled]:focus, fieldset[disabled] .btn-facebook:focus, .btn-facebook.disabled.focus, .btn-facebook[disabled].focus, fieldset[disabled] .btn-facebook.focus {
-  background-color: #3b5998;
-  border-color: rgba(0, 0, 0, 0.2); }
-
-.btn-facebook .badge {
-  color: #3b5998;
-  background-color: #fff; }
-
-/*@import 'bootstrap-social';*/
 .page-gallery {
   background: url("https://images.unsplash.com/photo-1516979187457-637abb4f9353?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60") no-repeat;
   background-size: cover;
