--- a/src/Web/LearningPlusWebApp/Views/Shared/_Layout-CSS.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_Layout-CSS.cshtml
@@ -15,35 +15,27 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700" rel="stylesheet">
 
-    <!-- Bootstrap CSS File -->
-    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Libraries CSS Files -->
     <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/lib/magnific-popup/magnific-popup.css" rel="stylesheet">
-    <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
 
     @RenderSection("Head", false)
 
     <!-- Main Stylesheet File -->
-    <link href="~/css/site_old.css" rel="stylesheet">
-    <link href="~/css/site.css" rel="stylesheet">
+    <link href="/css/site.css" rel="stylesheet">
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
-
-<body id="body" class="pt-0">
+<p>CSS</p>
+<body>
 
     <!--==========================
       Top Bar
     ============================-->
-    <section id="topbar" class="d-none d-lg-block">
-        <div class="container clearfix">
+    <section class="topbar">
+        <div class="wrapper">
             <div class="contact-info float-left">
                 <i class="fa fa-envelope-o"></i> <a href="mailto:svetleto_gb@abv.bg">svetleto_gb@abv.bg</a>
-                <i class="fa fa-phone"></i> 0883 48-35-09
+                <i class="fa fa-phone"></i><a href="tel:+359883483509">0883 48-35-09</a>
             </div>
             <div class="social-links float-right">
                 <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -61,36 +53,15 @@
     <!--==========================
       Footer
     ============================-->
-    <footer id="footer">
+    <footer class="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>Reveal</strong>. All Rights Reserved
-            </div>
-            <div class="credits">
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                &copy; Copyright <strong>for learning purpose</strong>. All Rights Reserved
             </div>
         </div>
     </footer><!-- #footer -->
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-
-    <!-- JavaScript Libraries -->
-    <script src="/lib/jquery/jquery.min.js"></script>
-    <script src="/lib/jquery/jquery-migrate.min.js"></script>
-    <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/lib/easing/easing.min.js"></script>
-    <script src="/lib/superfish/hoverIntent.js"></script>
-    <script src="/lib/superfish/superfish.min.js"></script>
-    <script src="/lib/wow/wow.min.js"></script>
-    <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/lib/magnific-popup/magnific-popup.min.js"></script>
-    <script src="/lib/sticky/sticky.js"></script>
-
-    <!-- Contact Form JavaScript File -->
-    <script src="/contactform/contactform.js"></script>
-
-    <!-- Template Main Javascript File -->
-    <script src="/js/main.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
