--- a/src/Web/LearningPlusWebApp/Views/Shared/_Layout-CSS.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_Layout-CSS.cshtml
@@ -25,7 +25,7 @@
     <link href="/css/site.css" rel="stylesheet">
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
-<p>CSS</p>
+
 <body>
 
     <!--==========================
@@ -56,7 +56,7 @@
     <footer class="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>for learning purpose</strong>. All Rights Reserved
+                &copy; Made <strong>for learning purposes with pure HTML and CSS</strong>.<br />All Rights Reserved
             </div>
         </div>
     </footer><!-- #footer -->
