--- a/src/Web/LearningPlusWebApp/wwwroot/scss/_styles.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/_styles.scss
@@ -125,15 +125,19 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 header {
-    padding: 1em 0;
-    height: 84px;
+    padding-top: 1em;
     transition: all 0.5s;
     z-index: 997;
     background: #fff;
 
     .wrapper {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        flex-wrap: wrap;
+
+        label, input {
+            display: none
+        }
     }
 
     .logo h1 {
@@ -165,7 +169,7 @@ header {
     position: relative;
     background: url("../img/intro-carousel/1.jpg") no-repeat;
     background-size: cover;
-    margin-top: 1em;
+    margin-top:0.3em;
 
     .intro-content {
         position: absolute;
@@ -250,7 +254,7 @@ header {
     }
 
     ul {
-        margin: 4px 0 0 0;
+        margin: -4px 0 0 0;
         padding: 10px;
         box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
         background: #fff;
@@ -741,18 +745,58 @@ header {
     }
 }
 
+@media (min-width: 769px) {
+
+    .logo {
+        flex: 0 0 100%;
+        text-align: center;
+    }
+
+    nav {
+        display: block;
+        margin: 0 auto;
+    }
+}
+
 @media (max-width: 768px) {
     .back-to-top {
         bottom: 15px;
     }
 
     header {
-        padding: 20px 0;
-        height: 74px;
-    }
+        .wrapper {
+            .logo {
+                flex: 0 0 80%;
+            }
 
-    header .logo h1 {
-        font-size: 34px;
+            label {
+                flex: 0 0 15%;
+                color: var(--color-theme-bold, #0c2e8a);
+                font-size: 3em;
+            }
+
+            nav {
+                display: none;
+
+                li {
+                    float: none;
+                    text-align: center;
+                    border: 2px solid #fff;
+
+                    &:hover {
+                        border: 2px solid var(--color-theme-bold, #0c2e8a);
+                    }
+                }
+            }
+
+            input:checked + nav {
+                display: block
+            }
+
+            label {
+                display: block;
+            }
+        }
     }
 
     header .logo img {
@@ -856,7 +900,18 @@ header {
     }
 }
 
+@media (min-width: 1101px) {
+    header .wrapper .logo {
+        flex: 0 0 48%;
+    }
+}
+
 @media (max-width: 1100px) {
+
+    header .wrapper {
+        flex-wrap: wrap;
+    }
+
     .about {
         display: block;
         position: relative;
