Small HTML changes.

--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -203,7 +203,7 @@
                 <div class="pic"><img src="img/team-4.jpg" alt=""></div>
                 <div class="details">
                     <h4>Дани Монева</h4>
-                    <span>Учител по български език и л-ра</span>
+                    <span>Учител по БЕЛ</span>
                     <div class="social">
                         <a href=""><i class="fa fa-twitter"></i></a>
                         <a href=""><i class="fa fa-facebook"></i></a>
