--- a/src/Web/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
@@ -2,7 +2,7 @@
 <!--==========================
      Header
    ============================-->
-<header>
+<header class="site-header">
     <div class="wrapper">
 
         <div class="logo">
