--- a/src/Web/LearningPlusWebApp/Views/Shared/_Layout-CSS.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_Layout-CSS.cshtml
@@ -63,6 +63,8 @@
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
+    <script src="~/js/loading.js"></script>
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
