--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -128,7 +128,7 @@ body {
   margin: 0 auto; }
 
 a {
-  color: var(--color-theme, var(--color-theme, #50d8af));
+  color: var(--color-theme, #50d8af);
   transition: 0.5s; }
   a:hover, a:active, a:focus {
     color: var(--color-theme-focus, #51d8af);
@@ -154,7 +154,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: block;
-  background: var(--color-theme, var(--color-theme, #50d8af));
+  background: var(--color-theme, #50d8af);
   color: #fff;
   padding: 0.4em 0.8em 0.5em 0.8em;
   font-size: 1em;
@@ -163,7 +163,7 @@ h6 {
   bottom: 1em;
   transition: background 0.5s; }
   .back-to-top:focus {
-    background: var(--color-theme, var(--color-theme, #50d8af));
+    background: var(--color-theme, #50d8af);
     color: #fff;
     outline: none; }
   .back-to-top:hover {
@@ -185,9 +185,9 @@ h6 {
     line-height: 1;
     color: #555; }
     .topbar .contact-info a:hover {
-      color: var(--color-theme, var(--color-theme, #50d8af)); }
+      color: var(--color-theme, #50d8af); }
   .topbar .contact-info i {
-    color: var(--color-theme, var(--color-theme, #50d8af));
+    color: var(--color-theme, #50d8af);
     padding: 4px; }
   .topbar .contact-info .fa-phone {
     padding-left: 20px;
@@ -200,7 +200,7 @@ h6 {
     line-height: 1px;
     border-left: 1px solid #e9e9e9; }
     .topbar .social-links a:hover {
-      color: var(--color-theme, var(--color-theme, #50d8af)); }
+      color: var(--color-theme, #50d8af); }
     .topbar .social-links a:first-child {
       border-left: 0; }
 
@@ -230,7 +230,7 @@ h6 {
       line-height: 1;
       display: inline-block; }
       .site-header .logo h1 a span {
-        color: var(--color-theme, var(--color-theme, #50d8af)); }
+        color: var(--color-theme, #50d8af); }
 
 /*--------------------------------------------------------------
 # Intro Section
@@ -495,7 +495,7 @@ h6 {
     cursor: pointer;
     transition: 0.3s ease-in-out; }
     .team .member:hover {
-      outline: solid 0.2em var(--color-theme, var(--color-theme, #50d8af));
+      outline: solid 0.2em var(--color-theme, #50d8af);
       transform: translateY(-1em); }
     .team .member .pic {
       overflow: hidden;
@@ -648,19 +648,17 @@ h6 {
 /*--------------------------------------------------------------
 # Media queries
 --------------------------------------------------------------*/
-@media (min-width: 767px) {
-  .contact .contact-address,
-  .contact .contact-phone,
-  .contact .contact-email {
-    padding: 20px 0; } }
-
 @media (min-width: 769px) {
   .logo {
     flex: 0 0 100%;
     text-align: center; }
   nav {
     display: block;
-    margin: 0 auto; } }
+    margin: 0 auto; }
+  .contact .contact-address,
+  .contact .contact-phone,
+  .contact .contact-email {
+    padding: 20px 0; } }
 
 @media (max-width: 768px) {
   .back-to-top {
@@ -695,57 +693,6 @@ h6 {
     margin-left: 0;
     padding-bottom: 30px; } }
 
-@media (max-width: 1000px) {
-  .intro .intro-content h2 {
-    font-size: 34px; }
-  .services {
-    text-align: center; }
-  .services .wrapper {
-    width: 80vw;
-    margin: 1em auto; }
-  .services .subtitle {
-    width: 60vw;
-    margin: auto; }
-  .services .box {
-    margin-bottom: 20px;
-    flex: 0 0 100%; }
-  .services .box .icon {
-    float: none;
-    text-align: center;
-    padding-bottom: 15px; }
-  .services .box h4,
-  .services .box p {
-    margin-left: 0;
-    text-align: center; }
-  .testimonials {
-    width: 100vw;
-    margin: 0 auto; }
-  .testimonials .wrapper {
-    flex-wrap: wrap;
-    padding: 0 2em 0 1em; }
-  .testimonials .section-header {
-    text-align: center; }
-  .testimonials .testimonial-item {
-    flex: 0 0 45%;
-    margin: 30px 10px; }
-  .team .wrapper {
-    width: 50vw;
-    flex-wrap: wrap;
-    margin: 0 auto; }
-    .team .wrapper .member {
-      flex: 0 0 100%; }
-  .team .section-header {
-    text-align: center; }
-  .contact .section-header {
-    text-align: center; }
-    .contact .section-header p {
-      width: 90vw;
-      margin: 0 auto; } }
-
-@media (min-width: 1101px) {
-  .site-header .wrapper .logo {
-    flex: 0 0 48%; } }
-
 @media (max-width: 1100px) {
   .site-header .wrapper {
     flex-wrap: wrap; }
@@ -772,7 +719,57 @@ h6 {
       top: 0;
       left: 0;
       right: 0;
-      bottom: 0; } }
+      bottom: 0; }
+  .intro .intro-content h2 {
+    font-size: 34px; }
+  .services {
+    text-align: center; }
+  .services .wrapper {
+    width: 80vw;
+    margin: 1em auto; }
+  .services .subtitle {
+    width: 60vw;
+    margin: auto; }
+  .services .box {
+    margin-bottom: 20px;
+    flex: 0 0 100%; }
+  .services .box .icon {
+    float: none;
+    text-align: center;
+    padding-bottom: 15px; }
+  .services .box h4,
+  .services .box p {
+    margin-left: 0;
+    text-align: center; }
+  .testimonials {
+    width: 100vw;
+    margin: 0 auto; }
+  .testimonials .wrapper {
+    flex-wrap: wrap;
+    padding: 0 2em 0 1em;
+    justify-content: center; }
+  .testimonials .section-header {
+    text-align: center; }
+  .testimonials .testimonial-item {
+    flex: 0 0 45%;
+    margin: 30px 10px; }
+  .team .wrapper {
+    width: 50vw;
+    flex-wrap: wrap;
+    margin: 0 auto; }
+    .team .wrapper .member {
+      flex: 0 0 100%; }
+  .team .section-header {
+    text-align: center; }
+  .contact .section-header {
+    text-align: center; }
+    .contact .section-header p {
+      width: 90vw;
+      margin: 0 auto; } }
+
+@media (min-width: 1101px) {
+  .site-header .wrapper .logo {
+    flex: 0 0 48%; } }
 
 @media (max-width: 576px) {
   .contact .google-map {
@@ -981,9 +978,3 @@ h6 {
       display: block;
       width: 100%;
       height: auto; }
-
-/*@import url('../scss/site-footer.css');*/
-/*@import url('../scss/navigation.css');*/
-/* @import url('../scss/transtions.css'); */
-/*@import url('../scss/animations.css');*/
-/*@import url('../scss/gallery.css');*/
